<resources>
    <string name="app_name">My Application</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="add_button">+</string>
    <string name="equals">"     ="</string>
    <string name="zero0">0</string>
    <string name="clear">C</string>
    <string name="thre">3</string>
    <string name="f">4</string>
    <string name="wfi">5</string>
    <string name="s">6</string>
    <string name="se">7</string>
    <string name="e">8</string>
    <string name="ni">9</string>
    <string name="dot">.</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">"     /"</string>
    <string name="backspace">x</string>
</resources>
